tests/invalid_typecheck/test_tc_var_proc_clash.aphi
/*
Type-check error: Redefinition of identifier (variable and procedure same name).
A variable and a procedure both use the name 'main'.
*/

int main;

procedure main {
}
